--- a/css/styles_3.css
+++ b/css/styles_3.css
@@ -30,8 +30,8 @@ margin-top: -40px;
 
 
 body{
-  background-image: url("../img/black_squares.jpeg");
-  background-size: cover;
+  background-image: url("../img/black_paisley.gif");
+
 
 
 }
@@ -39,6 +39,14 @@ img{
   border: 2px solid black;
 
 }
+#countdown{
+  color: lightgreen;
+  font-size: 30px;
+  position: fixed;
+  margin-top: 30px;
+  margin-left: 600px;
+}
+
 
 
 #first:hover,#second:hover,#third:hover,#fourth:hover,
